# SynapseFast

./: .gitignore  README.md  pyproject.toml
bench/: autotune_attention.py  bench_attention.py  compare_attention.py  plot_attention_results.py
crates/synapsefast-planner/: Cargo.toml
crates/synapsefast-planner/src/: lib.rs
csrc/synapsefast_cuda/: activations.cu  attention.cu  bias_ops.cu  bindings.cpp  kv_cache.cu  layer_norm.cu  rms_norm.cu
docs/benchmarks/: compare_causal.json  compare_noncausal.json
examples/: hf_text_classify_demo.py  sklearn_tabular_demo.py  synapsefast_sklearn_like_demo.py  train_toy_gpt.py  xgboost_tabular_demo.py
scripts/: run_with_msvc.ps1
synapsefast/: __init__.py  _cuda_ops.py  _planner.py  _torch_reference.py  api.py  autotune.py  env.py  metrics.py  nn.py  pipeline.py  preprocessing.py  tabular.py  train.py
synapsefast/integrations/: __init__.py  cv.py  gbm.py  nlp.py  utils.py
tests/: conftest.py  test_attention.py  test_attention_cuda.py  test_gelu.py  test_kv_cache.py  test_kv_cache_cuda.py  test_norms.py  test_sklearn_like.py
zig/: build.zig
